# RustCreatures

./: Cargo.toml  README.md
src/: main.rs
src/controller/: mod.rs
src/model/: brain.rs  creature.rs  mod.rs  world.rs
src/util/: gridlookup.rs  mod.rs
src/view/: mod.rs
