[package]
name = "rust_creatures"
version = "0.1.0"
authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.5"

[dependencies.sdl2]
version = "^0.34"
features = ['gfx']