[package]
name = "rust_creatures"
version = "0.1.0"
authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.5"
ndarray-rand = "^0.13"
num-derive = "^0.3"
num-traits = "^0.2"
rand_distr = "^0.4"
# This is particular, don't mess with.
blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "system"] }

[dependencies.sdl2]
version = "^0.34"
features = ['gfx']

[dependencies.ndarray]
version = "^0.14"
features = ["blas"]